--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,16 @@ services:
       - frontend
       - backend
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf.template
+      - ./entrypoint.sh:/entrypoint.sh
       - certbot-ssl:/etc/letsencrypt
       - certbot-www:/var/www/certbot
     ports:
       - "80:80"
       - "443:443"
+    env_file:
+      - .env
+    entrypoint: ["/bin/sh", "/entrypoint.sh"]
 
   backend:
     build: ./backend
