--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,17 @@
 FROM node:18
 WORKDIR /app
+
+# Copy package files
 COPY package.json package-lock.json ./
+
+# Install dependencies
 RUN npm install
-RUN npm install -g tailwindcss postcss autoprefixer
+
+# Copy source code
 COPY . .
-RUN npm install --legacy-peer-deps tailwindcss postcss autoprefixer @tailwindcss/postcss postcss-loader postcss-import framer-motion @heroicons/react @shadcn/ui @fontsource/inter lottie-react @lottiefiles/react-lottie-player react-router-dom axios @react-oauth/google js-cookie
-RUN echo "module.exports = { plugins: [require('postcss-import'), require('tailwindcss'), require('autoprefixer')] }" > postcss.config.js
-RUN touch tailwind.config.js && echo "module.exports = { content: ['./src/**/*.{js,jsx,ts,tsx}'], theme: { extend: { fontFamily: { inter: ['Inter', 'sans-serif'] } } }, plugins: [], }" > tailwind.config.js
-ENV HTTPS=true
-ENV HTTP=true
-COPY public/ /app/public/
+
+# Expose port
+EXPOSE 3000
+
+# Start the application
 CMD ["npm", "start"]
