--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,9 @@ djangorestframework
 psycopg2-binary
 django-cors-headers
 djangorestframework-simplejwt
+PyJWT
 social-auth-app-django
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
 Pillow
-channels
-channels-redis
